Comments and minor changes